# ranking_lists

./: Cargo.toml  New Site Instructions.txt  build_and_sync.bat  index.html  instructions.txt  manifest.json  service-worker.js  sync_docs.bat  watch.bat  watchHTTPS.bat
assets/: index.json
assets/lists/: all boy names.json  boy names cro.json
certs/: cert.crt  cert.csr  cert.pem  key.pem
docs/: index.html  manifest.json
docs/assets/lists/: all boy names.json  boy names US.json  boy names aus.json  boy names uk.json  fruits.json
docs/pkg/: package.json  yew_project.d.ts  yew_project.js  yew_project_bg.wasm  yew_project_bg.wasm.d.ts
docs/static/: style.css  style.css.map  style.scss
src/: data.rs  lib.rs  matchflow.rs  ranking.rs  storage.rs
static/: style.css  style.css.map  style.scss
