[package]
name = "yew_project"
version = "0.1.0"
edition = "2021"
description = "A simple Yew-based flashcard app"

[dependencies]
console_log = "0.2"
gloo-events = "0.2"
gloo-net = "0.2"
gloo-storage = "0.2"
indexmap = { version = "2", features = ["serde"] }
js-sys = "0.3"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Element", "EventTarget", "TouchEvent", "HtmlElement", "Touch", "DomTokenList", "Document"] }
yew = { version = "0.20", features = ["csr"] }

[lib]
crate-type = ["cdylib", "rlib"]
